asupersync-macros/tests/compile_fail/spawn_string_without_future.rs
use asupersync_macros::spawn;

fn main() {
    let _ = spawn!("worker");
}
